--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -161,7 +161,7 @@ button {
 }
 
 .clear-fix:after {
-  content: "";
+  content: '';
   display: block;
 }
 
@@ -194,7 +194,7 @@ button {
 
 .sprite-a:after,
 .sprite-b:before {
-  content: "";
+  content: '';
 }
 
 .sprite-a:after,
