--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -61,8 +61,8 @@
   filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#{$startColor}', endColorStr='#{$endColor}', GradientType=1);
 }
 
-@mixin box-shadow($x: 2px, $y: 2px, $blur: 5px, $spread: 0, $color: rgba(0,0,0,.4), $inset: "") {
-  @if ($inset != "") {
+@mixin box-shadow($x: 2px, $y: 2px, $blur: 5px, $spread: 0, $color: rgba(0,0,0,.4), $inset: '') {
+  @if ($inset != '') {
     @include css3-prefix('box-shadow', 'inset' $x $y $blur $spread $color);
   } @else {
     @include css3-prefix('box-shadow', $x $y $blur $spread $color);
