--- a/sass/_print.scss
+++ b/sass/_print.scss
@@ -11,8 +11,8 @@
     display: none;
     opacity: 0;
   }
-  .left-block__item-personal {
-    margin-bottom: 160px;
+  .left-block__item-contacts {
+    margin-bottom: 80px;
   }
   .left-block__item {
     padding-top: 8px;
@@ -21,6 +21,6 @@
     padding-top: 2px;
   }
   .right-block__item {
-    margin-bottom: 40px;
+    margin-bottom: 50px;
   }
 }
