--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -122,7 +122,6 @@ body {
     margin-bottom: 10px;
   }
   &__about {
-    border-bottom: 1px solid $colorMain;
     margin-bottom: 20px;
     padding-bottom: 20px;
   }
@@ -287,7 +286,7 @@ body {
     &:after {
       background-color: $colorMain;
       bottom: 5px;
-      content: "";
+      content: '';
       left: 0;
       top: 40px;
       position: absolute;
@@ -315,11 +314,11 @@ body {
       background-color: $colorMain;
       bottom: 3px;
       border-radius: 50%;
-      content: "";
-      height: 10px;
+      content: '';
+      height: 9px;
       left: -39px;
       position: absolute;
-      width: 10px;
+      width: 9px;
     }
   }
   &__skills {
